# xhtmlmd

./: .gitignore  Cargo.toml  DEV.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DIALECT.md  sample.html  sample.md
examples/: README.md  demo.md  examples.ipynb  filldemo.py  legal_demo-bound.docx  legal_demo-filled.md  legal_demo-form.docx  legal_demo-render.md  legal_demo.docx  legal_demo.html  legal_demo.ipynb  legal_demo.md  legal_demo.typ  render_demo.py
nbs/: examples.ipynb
python/mdhtml/: __init__.py  __main__.py  _html.py  export.py  md.py  sample.md  typst.py
python/xhtml_md_parser/: __init__.py
python/xhtmlmd/: __init__.py  __main__.py  sample.md
src/: ast.rs  attrs.rs  auto_ids.rs  balance.rs  block.rs  entity.rs  export_html.rs  inline.rs  lib.rs  line.rs  main.rs  python.rs  render.rs  resolve.rs  smart.rs  tagfilter.rs  template.rs
tests/: conformance.rs  focused.rs  pathological.rs  test_conformance.py  test_export.py  test_focused.py  test_pathological.py  test_python.py  test_typst.py
tests/fixtures/: dialect.html  dialect.md  dialect.xhtml  extensions.xhtml
tests/source/: kramdown.txt  markdowntests.md  mf.txt  pandoc-grid-tables.txt
tests/source/cmark-gfm/: README.md  extensions.txt  spec.txt
tests/source/php-markdown-extra.mdtest/: Backtick Fenced Code Blocks Special Cases.text  Backtick Fenced Code Blocks Special Cases.xhtml  Backtick Fenced Code Blocks.xhtml  Emphasis.xhtml  Footnotes.xhtml  Tables.text  Tilde Fenced Code Blocks Special Cases.text  Tilde Fenced Code Blocks Special Cases.xhtml  Tilde Fenced Code Blocks.xhtml
tools/: build.sh  bump.sh  bump2.sh  gen_docs.py  release.sh  test.sh
