[package]
name = "xhtmlmd"
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A bounded-time, Pandoc-leaning Markdown parser with GFM, Extra/kramdown, math, fenced divs, and XHTML output."
repository = "https://github.com/AnswerDotAI/xhtmlmd"
homepage = "https://github.com/AnswerDotAI/xhtmlmd"
documentation = "https://github.com/AnswerDotAI/xhtmlmd"

[lib]
name = "xhtmlmd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
html-escape = ">=0.2"
pyo3 = ">=0.28"
unicode-properties = "0.1"
unicode-width = "0.2"

[features]
extension-module = ["pyo3/extension-module"]
