[package]
name = "mdhtml"
version = "0.1.13"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "A bounded-time, Pandoc-leaning Markdown parser with GFM, Extra/kramdown, math, fenced divs, and MDHTML output."
repository = "https://github.com/AnswerDotAI/mdhtml"
homepage = "https://github.com/AnswerDotAI/mdhtml"
documentation = "https://github.com/AnswerDotAI/mdhtml"

[lib]
name = "mdhtml"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
html-escape = ">=0.2"
pyo3 = ">=0.28"
unicode-properties = "0.1"
unicode-width = "0.2"

[features]
extension-module = ["pyo3/extension-module"]
