[package]
name = "mdhtml"
version = "0.1.13"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "A bounded-time, Pandoc-leaning Markdown parser with GFM, Extra/kramdown, math, fenced divs, and MDHTML output."
repository = "https://github.com/AnswerDotAI/mdhtml"
homepage = "https://github.com/AnswerDotAI/mdhtml"
documentation = "https://github.com/AnswerDotAI/mdhtml"

[lib]
name = "mdhtml"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
base64 = "0.23.0"
fast5ever = { git = "https://github.com/AnswerDotAI/fast5ever" }
fastpylight = { git = "https://github.com/AnswerDotAI/fastpylight", default-features = false, features = ["standard-languages"], optional = true }
html-escape = ">=0.2"
pyo3 = { version = ">=0.28", optional = true }
unicode-properties = "0.1"
unicode-width = "0.2"

[features]
default = ["hl"]
hl = ["dep:fastpylight"]
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[lints.clippy]
too_many_arguments = "allow"
