[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "xhtmlmd"
dynamic = ["version"]
description = "A bounded-time, Pandoc-leaning Markdown parser with GFM, Extra/kramdown, math, fenced divs, and XHTML output."
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Jeremy Howard", email = "j@fast.ai"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/xhtmlmd"
Repository = "https://github.com/AnswerDotAI/xhtmlmd"
Issues = "https://github.com/AnswerDotAI/xhtmlmd/issues"

[project.optional-dependencies]
dev = ["fastship>=0.0.14", "maturin>=1.0,<2.0", "pytest", "fastpylight>=0.1.6", "math-core>=0.6.4"]

[project.entry-points.fastaudit_safe_native]
xhtmlmd = "xhtmlmd"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "xhtmlmd._native"
data = "python/xhtmlmd.data"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.fastship]
branch = "main"

[tool.fastship.rs]
bins = ["xhtmlmd"]
data_scripts = "python/xhtmlmd.data/scripts"
